Correct `h1` placement & `overflow` prop. issues.

--- a/digital-rain/main.scss
+++ b/digital-rain/main.scss
@@ -27,34 +27,34 @@ body {
   text-orientation: upright;
   background: $matrix-green-terminal-background;
   width: 100vw;
-  overflow: hidden;
+  height: 100vh;
   font-family: "Courier New", Courier, monospace;
   font-weight: 500;
-  h1 {
-    position: absolute;
-    display: none;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    height: 120vh;
-    font-weight: 400;
-    font-size: 3.5rem;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    color: $matrix-green-terminal-current;
+  overflow: hidden;
 
-    writing-mode: horizontal-tb;
-    text-orientation: upright;
-  }
-  
   #root {
-    position: relative;
+    position: fixed;
+    h1 {
+      position: fixed;
+      display: none;
+      z-index: 2;
+      top: 33%;
+      left: 0;
+      right: 0;
+      display: flex;
+      width: 100vw;
+      font-weight: 400;
+      font-size: 3.5rem;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: $matrix-green-terminal-current;
 
+      writing-mode: horizontal-tb;
+      text-orientation: upright;
+    }
     .line-of-code {
-      position: absolute;
+      position: relative;
       color: $matrix-green-terminal-previous;
       padding: 0;
       margin: 0;
